# comic-universe

./: .env.codesigning.template  .env.example  .eslintrc.json  .gitignore  .stylelintrc.json  .yarnrc  CI_CD_CODE_SIGNING.md  CODE_SIGNING.md  LICENSE  README.md  copy-files.js  dev-app-update.yml  drizzle.config.ts  electron-builder.yml  electron.vite.config.js  electron.vite.config.ts  eslint.config.js  failed_workflows.txt  index.html  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  test-cleanup-v2.md  test-cleanup.md  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.github/: CI-CD.md  dependabot.yml
docs/: AUTO_UPDATER_FIX.md  CERTIFICATE_EXPIRATION.md  CODE_SIGNING.md  FALLBACK_UPDATE_SYSTEM.md  INDEX.md  OLD_VERSION_UPDATE_ISSUES.md  README.md
prisma/: database.db  database.db-journal  schema.prisma
resources/: icon.icns
scripts/: after-extract.js  after-pack.js  before-build.js  build-win-no-sign.js  create-release.sh  create-simple-certs.sh  embed-executable-icon.js  ensure-certificate.js  generate-cert-windows.bat  generate-consistent-cert.sh  generate-release-notes.sh  generate-self-signed-certs.sh  generate-windows-cert.bat  rebuild-native-modules.js  rebuild-sqlite.js  renew-certificate.sh  (+5 more)
src-tauri/: Cargo.toml  clippy.toml  database.db-shm  database.db-wal  tauri.conf.json
src-tauri/migrations/: 20241201000001_initial_schema.sql
src-tauri/src/: commands.rs  database.rs  database_simple.rs  lib.rs  main.rs  models.rs  plugin_runner.rs  plugins.rs  simple_plugin_runner.rs  utils.rs
(+746 files in other folders)
