[package]
name = "comic-universe-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "comic_universe_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.8", features = ["macos-private-api"] }
tauri-plugin-opener = "2.5"
tauri-plugin-fs = "2.4"
tauri-plugin-http = "2.5"
tauri-plugin-dialog = "2.4"
tauri-plugin-shell = "2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0.99"
thiserror = "2.0"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
reqwest = { version = "0.12.23", features = ["json", "stream"] }
flate2 = "1.1"
tar = "0.4"
url = "2.5"
dirs = "6.0"
async-trait = "0.1.89"

